Initial NFSC commit

--- a/config.ini
+++ b/config.ini
@@ -11,11 +11,12 @@ file_log_level = 3
 console_log_level = 3
 
 [connection]
-emulator_ip = REPLACE_ME
-plasma_client_port = 18390
-theater_client_port = 18395
+emulator_ip = localhost
+plasma_client_port = 18210
+theater_client_port = 18215
 plasma_server_port = 19021
 theater_server_port = 19026
+messenger_server_port = 13505
 http_server_port = 80
 
 [emulator]
