--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,7 @@ plasma_server_port = 19021
 theater_server_port = 19026
 messenger_server_port = 13505
 http_server_port = 80
+playnow_port = 19018
 
 [emulator]
 new_players_are_veterans = False
